# iris

./: .gitignore  CMakeLists.txt  Experiment.cpp  Experiment.h  Geometry.h  IrisBorders.sln  IrisSegmentation.h  TEST_segmentation.cpp  errors.txt  filt.c  header.h  imPlot.cpp  imageio.c  imio.h  input.txt  irisSegmentation.c  log.txt  main.c  mySobelBig.c  mybdl_pgrad.c  mybdl_refineiris.c  mybdl_refinepupil.c  removal.c  sobel_log.txt
BaseRadius/: BaseRadii.cpp  Experiment.cpp  GlobalParams.h  ImageProcessing.h  ProjectionProcessing.cpp
Debug/: BuildLog.htm  IrisBorders.ilk  mt.dep  vc90.idb
Release/: BuildLog.htm  mt.dep  vc90.idb
apps/: CMakeLists.txt
apps/IrisLocalization/: .gitignore  BaseRadii.cpp  BaseRadii.h  BorderDetection.h  CMakeLists.txt  Experiment.c  Experiment.h  Geometry.h  GlobalParams.h  ImageProcessing.c  ImageProcessing.h  PairedGradients.c  PairedGradients.h  ProjectionProcessing.cpp  TEST_segmentation.cpp  imPlot.cpp  imageio.c  imio.h
apps/IrisLocalization/CoreMatveev/: canny.c  ffl.h
apps/IrisSegmentation/: Cur_NORMALIZED.bmprent  Experiment.cpp  Experiment.h  IrisBorders.sln  IrisBorders.vcproj  IrisBorders.vcxproj  IrisBorders.vcxproj.filters  IrisSegmentation.h  OpenCV_Debug.vsprops  Sobel.c  UpgradeLog.htm  geom.cpp  imPlot.h  imageio.c  imio.h  irisSegmentation.c  mybdl_pgradBothBorders.c  output.txt  pgy_calc.txt  sobelMap.txt  stddefs.h
apps/IrisSegmentation/Backup/: IrisBorders.sln
apps/IrisSegmentation/BaseRadius/: BaseRadii.cpp  BaseRadii.h  BaseRadius.vcxproj  BaseRadius.vcxproj.filters  BorderDetection.h  Experiment.cpp  GlobalParams.h  ImageProcessing.cpp  ImageProcessing.h  ProjectionProcessing.cpp
apps/IrisSegmentation/BaseRadius/Debug/: vc140.idb
apps/IrisSegmentation/BaseRadius/Debug/BaseRadius.tlog/: BaseRadius.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
apps/IrisSegmentation/BaseRadius/Release/BaseRadius.tlog/: BaseRadius.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
apps/IrisSegmentation/BaseRadius/x64/Debug/: vc140.idb
apps/IrisSegmentation/BaseRadius/x64/Debug/BaseRadius.tlog/: BaseRadius.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
apps/IrisSegmentation/BaseRadius/x64/Release/BaseRadius.tlog/: BaseRadius.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
apps/IrisSegmentation/PairedGradients/: Experiment.cpp  Experiment.h  Geometry.h  bdl.h  bpl.h  canny.c  conobj.c  dbg.h  errorcodes.h  header.h  hist.c  imPlot.cpp  imPlot.h  imageio.c  imio.h  ipl.h  irisSegmentation.c  ownipl.h  tables.h  unitypes.h
apps/IrisSegmentation/TESTS/: TESTS.vcxproj  TESTS.vcxproj.filters  imPlot_test.cpp
apps/IrisSegmentation/TESTS/x64/Debug/: vc140.idb
apps/IrisSegmentation/TESTS/x64/Debug/TESTS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
apps/IrisSegmentation/TESTS/x64/Release/TESTS.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
apps/IrisSegmentation/clc/: clc.mak
apps/IrisSegmentation/clc/bpl/src/: ownbpl.h
apps/IrisSegmentation/clc/bpl/src/linalg/: agg0r_c.html  eigen.c  matrsolv.c
apps/IrisSegmentation/clc/bpl/src/misc/: mathmix.c  miscfn.c
apps/IrisSegmentation/clc/bpl/src/pca/: SLDBuilder.c  SNDBuilder.c  SNDClassifier.h  SPCAnalyser.c  SPCBuilder.h
apps/IrisSegmentation/clc/ipl/: ipl.mak  ipl_vs8.vcproj
apps/IrisSegmentation/clc/ipl/src/: iplmisc.c
apps/IrisSegmentation/clc/ipl/src/Ajust/: affine.h  readme
apps/IrisSegmentation/clc/ipl/src/Bit/: readme
apps/IrisSegmentation/clc/ipl/src/Geom/: elldet.c  geom.c  readme
apps/IrisSegmentation/clc/ipl/src/Hist/: readme
apps/IrisSegmentation/clc/ipl/src/Pumps/: edgedraw.c  pmp.c
apps/IrisSegmentation/clc/ipl/src/Segm/: chunx1.c  chunx2.c  chunx_lin_ff.c  cluster.c  flash.c  proj.c  watershed.c
apps/IrisSegmentation/clc/ipl/src/Spectral/: fht.h  pyr.c
apps/IrisSegmentation/clc/ipl/src/cvl/: BlStrtch.c  Scale.c
apps/IrisSegmentation/x64/Debug/: BaseRadius.ilk  TESTS.ilk
apps/IrisSegmentation/x64/Release/: BaseRadius.iobj  BaseRadius.ipdb  TESTS.iobj  TESTS.ipdb
clc/bpl/: bpl.mak  bpl_vs8.vcproj
clc/bpl/src/errate/: errate.c  statbld.c
clc/bpl/src/linalg/: aeh1r_c.html  agh0r_c.html  ellproc.c  invert.c  linsys.c  matrbase.c  matrchk.c
clc/bpl/src/misc/: LevMar.c  crc32.c
clc/bpl/src/pca/: SLDBuilder.h  SNDClassifier.c  SPCBuilder.c  readme  svd.c
clc/ipl/src/Ajust/: affine.c  lines.c
clc/ipl/src/Bit/: BitMorph.c
clc/ipl/src/Pumps/: diffus.c  filt.c  ordstat.c
clc/ipl/src/Segm/: blob.c  cascade.c  chunx_lin_hc.c  digging.c  readme
clc/ipl/src/Spectral/: fft.c  fht.c  fwt.c  fwt.h
clc/ipl/src/cvl/: DrawCirc.c  GradProc.c  ROIProc.c  Sobel.c  pol.c
research/BaseRadii/: BaseRadii.ipynb  BorderClassification.ipynb  Edge Filtering.ipynb
